// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`video Basic renders as expected 1`] = `
<div>
  <video
    autoPlay={true}
    className="block mx-auto"
    loop={true}
    muted={true}
    src="./files/browser-example.mp4"
    title="A video!"
    type="video/mp4"
    width="100%"
  >
    <p>
      Your browser doesn't support HTML5 video. Here is a
       
      <a
        href="./files/browser-example.mp4"
      >
        link to the video
      </a>
       instead.
    </p>
  </video>
</div>
`;

exports[`video Reduced motion renders as expected 1`] = `
<div>
  <video
    className="block mx-auto"
    controls={true}
    muted={true}
    src="./files/browser-example.mp4"
    title="A video!"
    type="video/mp4"
    width="100%"
  >
    <p>
      Your browser doesn't support HTML5 video. Here is a
       
      <a
        href="./files/browser-example.mp4"
      >
        link to the video
      </a>
       instead.
    </p>
  </video>
</div>
`;
